enable simple video chat link

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
       <h3>
       <a id="creating-pages-manually" class="anchor" href="#creating-pages-manually" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Tutorials</h3>
 
-      <p>01-1. Simple video chat</p>
+      <p><a href="tutorials/01-1.simpleVideoChat">01-1. Simple video chat</a></p>
       <p style="text-decoration: line-through; color: #ccc">01-2. Hello ADAWARP
       <p style="text-decoration: line-through; color: #ccc">01-2. Send hello world</p>
       <p style="text-decoration: line-through; color: #ccc">01-3. Receive hello world</p>
